Prevent image overflow within the main area. (#80)

--- a/src/scss/_grid-areas.scss
+++ b/src/scss/_grid-areas.scss
@@ -124,6 +124,11 @@
 			box-sizing: border-box;
 			max-width: 100%;
 		}
+
+		img {
+			max-width: 100%;
+			display: inline-block;
+		}
 	}
 }
 
